Header section Created

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +13,44 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
 </head>
+
 <body>
-    
+    <!-- Header Section Creation -->
+    <div class="info">
+        <div class="info-left">
+            <section>
+                <i class='bx bx-phone'></i> +919344518443
+            </section>
+            <section>
+                <i class='bx bx-envelope'></i> jmpandipostbox@gmail.com
+            </section>
+        </div>
+        <div class="info-right">
+            <div class="social">
+                <a href="#"><i class='bx bxl-facebook'></i></a>
+                <a href="#"><i class="bx bxl-twitter"></i></a>
+                <a href="#"><i class="bx bxl-instagram"></i></a>
+                <a href="#"><i class="bx bxl-youtube"></i></a>
+            </div>
+            <div class="info-link">
+                <a href="#">shop now</a>
+            </div>
+        </div>
+    </div>
+
+    <header>
+        <div class="logo">
+            <a href="">Madurai Coffe</a>
+        </div>
+        <nav class="navigation">
+            <li><a href="#">home</a></li>
+            <li><a href="#">shop</a></li>
+            <li><a href="#"> menu</a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">contact</a></li>
+        </nav>
+    </header>
+    <!-- Header Section End -->
 </body>
+
 </html>
