Home section Creation

--- a/index.html
+++ b/index.html
@@ -51,6 +51,24 @@
         </nav>
     </header>
     <!-- Header Section End -->
+
+    <!-- Home Section Creation -->
+    <div class="home-section">
+        <div class="home-content">
+            <h1>Let's enjoy with our <br> beautiful coffee</h1>
+            <p>
+                Affordable prices for everyone, so give us an opportunity <br> for evaluation.
+            </p>
+            <div class="home-links">
+                <div class="first">
+                    <a href="#">testy coffee</a>
+                </div>
+                <div class="second">
+                    <a href="#">read more</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
