--- a/index.html
+++ b/index.html
@@ -69,6 +69,359 @@
             </div>
         </div>
     </div>
+
+    <!-- Product Section Creation -->
+    <div class="bg-shop">
+        <div class="shop-links">
+            <div>
+                <h2>products</h2>
+            </div>
+            <div class="links">
+                <li>all</li>
+                <li>coffee</li>
+                <li>machines</li>
+                <li>sweets </li>
+            </div>
+        </div>
+        <div class="shop-flex">
+            <div class="shop1">
+                <div class="shop-image">
+                    <img src="images\bag-1.jpg" alt="">
+                    <div class="price">
+                        -7%
+                    </div>
+                    <div class="social">
+                        <a href=""><i class="bx bx-heart"></i></a>
+                        <a href=""><i class="bx bx-shopping-bag"></i></a>
+                        <a href=""><i class="bx bx-share-alt"></i></a>
+                        <a href=""><i class="bx bx-search"></i></a>
+                    </div>
+                </div>
+                <h2>hot coffee</h2>
+                <div class="stars">
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bx-star'></i>
+                </div>
+                <article>
+                    ₹279
+                </article>
+                <span>
+                    ₹300
+                </span>
+            </div>
+            <div class="shop1">
+                <div class="shop-image">
+                    <img src="images\bag-1.jpg" alt="">
+                    <div class="price">
+                        -7%
+                    </div>
+                    <div class="social">
+                        <a href=""><i class="bx bx-heart"></i></a>
+                        <a href=""><i class="bx bx-shopping-bag"></i></a>
+                        <a href=""><i class="bx bx-share-alt"></i></a>
+                        <a href=""><i class="bx bx-search"></i></a>
+                    </div>
+                </div>
+                <h2>hot coffee</h2>
+                <div class="stars">
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bx-star'></i>
+                </div>
+                <article>
+                    ₹279
+                </article>
+                <span>
+                    ₹300
+                </span>
+            </div>
+            <div class="shop1">
+                <div class="shop-image">
+                    <img src="images\bag-1.jpg" alt="">
+                    <div class="price">
+                        -7%
+                    </div>
+                    <div class="social">
+                        <a href=""><i class="bx bx-heart"></i></a>
+                        <a href=""><i class="bx bx-shopping-bag"></i></a>
+                        <a href=""><i class="bx bx-share-alt"></i></a>
+                        <a href=""><i class="bx bx-search"></i></a>
+                    </div>
+                </div>
+                <h2>hot coffee</h2>
+                <div class="stars">
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bx-star'></i>
+                </div>
+                <article>
+                    ₹279
+                </article>
+                <span>
+                    ₹300
+                </span>
+            </div>
+            <div class="shop1">
+                <div class="shop-image">
+                    <img src="images\bag-1.jpg" alt="">
+                    <div class="price">
+                        -7%
+                    </div>
+                    <div class="social">
+                        <a href=""><i class="bx bx-heart"></i></a>
+                        <a href=""><i class="bx bx-shopping-bag"></i></a>
+                        <a href=""><i class="bx bx-share-alt"></i></a>
+                        <a href=""><i class="bx bx-search"></i></a>
+                    </div>
+                </div>
+                <h2>hot coffee</h2>
+                <div class="stars">
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bx-star'></i>
+                </div>
+                <article>
+                    ₹279
+                </article>
+                <span>
+                    ₹300
+                </span>
+            </div>
+            <div class="shop1">
+                <div class="shop-image">
+                    <img src="images\bag-1.jpg" alt="">
+                    <div class="price">
+                        -7%
+                    </div>
+                    <div class="social">
+                        <a href=""><i class="bx bx-heart"></i></a>
+                        <a href=""><i class="bx bx-shopping-bag"></i></a>
+                        <a href=""><i class="bx bx-share-alt"></i></a>
+                        <a href=""><i class="bx bx-search"></i></a>
+                    </div>
+                </div>
+                <h2>hot coffee</h2>
+                <div class="stars">
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bx-star'></i>
+                </div>
+                <article>
+                    ₹279
+                </article>
+                <span>
+                    ₹300
+                </span>
+            </div>
+            <div class="shop1">
+                <div class="shop-image">
+                    <img src="images\bag-1.jpg" alt="">
+                    <div class="price">
+                        -7%
+                    </div>
+                    <div class="social">
+                        <a href=""><i class="bx bx-heart"></i></a>
+                        <a href=""><i class="bx bx-shopping-bag"></i></a>
+                        <a href=""><i class="bx bx-share-alt"></i></a>
+                        <a href=""><i class="bx bx-search"></i></a>
+                    </div>
+                </div>
+                <h2>hot coffee</h2>
+                <div class="stars">
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bx-star'></i>
+                </div>
+                <article>
+                    ₹279
+                </article>
+                <span>
+                    ₹300
+                </span>
+            </div>
+            <div class="shop1">
+                <div class="shop-image">
+                    <img src="images\bag-1.jpg" alt="">
+                    <div class="price">
+                        -7%
+                    </div>
+                    <div class="social">
+                        <a href=""><i class="bx bx-heart"></i></a>
+                        <a href=""><i class="bx bx-shopping-bag"></i></a>
+                        <a href=""><i class="bx bx-share-alt"></i></a>
+                        <a href=""><i class="bx bx-search"></i></a>
+                    </div>
+                </div>
+                <h2>hot coffee</h2>
+                <div class="stars">
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bx-star'></i>
+                </div>
+                <article>
+                    ₹279
+                </article>
+                <span>
+                    ₹300
+                </span>
+            </div>
+            <div class="shop1">
+                <div class="shop-image">
+                    <img src="images\bag-1.jpg" alt="">
+                    <div class="price">
+                        -7%
+                    </div>
+                    <div class="social">
+                        <a href=""><i class="bx bx-heart"></i></a>
+                        <a href=""><i class="bx bx-shopping-bag"></i></a>
+                        <a href=""><i class="bx bx-share-alt"></i></a>
+                        <a href=""><i class="bx bx-search"></i></a>
+                    </div>
+                </div>
+                <h2>hot coffee</h2>
+                <div class="stars">
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bx-star'></i>
+                </div>
+                <article>
+                    ₹279
+                </article>
+                <span>
+                    ₹300
+                </span>
+            </div>
+            <div class="shop1">
+                <div class="shop-image">
+                    <img src="images\bag-1.jpg" alt="">
+                    <div class="price">
+                        -7%
+                    </div>
+                    <div class="social">
+                        <a href=""><i class="bx bx-heart"></i></a>
+                        <a href=""><i class="bx bx-shopping-bag"></i></a>
+                        <a href=""><i class="bx bx-share-alt"></i></a>
+                        <a href=""><i class="bx bx-search"></i></a>
+                    </div>
+                </div>
+                <h2>hot coffee</h2>
+                <div class="stars">
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bx-star'></i>
+                </div>
+                <article>
+                    ₹279
+                </article>
+                <span>
+                    ₹300
+                </span>
+            </div>
+            <div class="shop1">
+                <div class="shop-image">
+                    <img src="images\bag-1.jpg" alt="">
+                    <div class="price">
+                        -7%
+                    </div>
+                    <div class="social">
+                        <a href=""><i class="bx bx-heart"></i></a>
+                        <a href=""><i class="bx bx-shopping-bag"></i></a>
+                        <a href=""><i class="bx bx-share-alt"></i></a>
+                        <a href=""><i class="bx bx-search"></i></a>
+                    </div>
+                </div>
+                <h2>hot coffee</h2>
+                <div class="stars">
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bx-star'></i>
+                </div>
+                <article>
+                    ₹279
+                </article>
+                <span>
+                    ₹300
+                </span>
+            </div>
+            <div class="shop1">
+                <div class="shop-image">
+                    <img src="images\bag-1.jpg" alt="">
+                    <div class="price">
+                        -7%
+                    </div>
+                    <div class="social">
+                        <a href=""><i class="bx bx-heart"></i></a>
+                        <a href=""><i class="bx bx-shopping-bag"></i></a>
+                        <a href=""><i class="bx bx-share-alt"></i></a>
+                        <a href=""><i class="bx bx-search"></i></a>
+                    </div>
+                </div>
+                <h2>hot coffee</h2>
+                <div class="stars">
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bx-star'></i>
+                </div>
+                <article>
+                    ₹279
+                </article>
+                <span>
+                    ₹300
+                </span>
+            </div>
+            <div class="shop1">
+                <div class="shop-image">
+                    <img src="images\bag-1.jpg" alt="">
+                    <div class="price">
+                        -7%
+                    </div>
+                    <div class="social">
+                        <a href=""><i class="bx bx-heart"></i></a>
+                        <a href=""><i class="bx bx-shopping-bag"></i></a>
+                        <a href=""><i class="bx bx-share-alt"></i></a>
+                        <a href=""><i class="bx bx-search"></i></a>
+                    </div>
+                </div>
+                <h2>hot coffee</h2>
+                <div class="stars">
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bxs-star gold'></i>
+                    <i class='bx bx-star'></i>
+                </div>
+                <article>
+                    ₹279
+                </article>
+                <span>
+                    ₹300
+                </span>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
