Second Section Creation

--- a/index.html
+++ b/index.html
@@ -70,6 +70,49 @@
         </div>
     </div>
 
+    <!-- Second Section Creation -->
+    <div class="first-section">
+        <div class="bg-service">
+            <div class="service-one">
+                <img src="images\img-sec-1.jpg" alt="">
+                <div class="overlay">
+                    <div class="over-txt">
+                        <p>for drinks</p>
+                        <h4>
+                            coffee & drinks
+                        </h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="bg-service">
+            <div class="service-one">
+                <img src="images\img-sec-2.jpg" alt="">
+                <div class="overlay">
+                    <div class="over-txt">
+                        <p>for drinks</p>
+                        <h4>
+                            coffee & drinks
+                        </h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="bg-service">
+            <div class="service-one">
+                <img src="images\img-sec-3.jpg" alt="">
+                <div class="overlay">
+                    <div class="over-txt">
+                        <p>for drinks</p>
+                        <h4>
+                            coffee & drinks
+                        </h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Product Section Creation -->
     <div class="bg-shop">
         <div class="shop-links">
