Footer Section Creation

--- a/index.html
+++ b/index.html
@@ -465,6 +465,47 @@
             </div>
         </div>
     </div>
+
+    <!-- Footer Section Creation -->
+    <div class="footer">
+        <div class="footer-flex">
+            <div class="footer1">
+                <div>
+                    <img src="images\logo.webp" alt="">
+                </div>
+                <section>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </section>
+                <div class="footer-links">
+                    <a href="#"><i class='bx bxl-facebook'></i></a>
+                    <a href="#"><i class="bx bxl-twitter"></i></a>
+                    <a href="#"><i class="bx bxl-instagram"></i></a>
+                    <a href="#"><i class="bx bxl-youtube"></i></a>
+                </div>
+            </div>
+            <div class="footer1">
+                <h3>contact info</h3>
+                <div class="location">
+                    <span><i class="fas fa-map-marker-alt"></i></span>
+                    <a href="#">our location</a>
+                    <section>Madurai, Trichy, Chennai</section>
+                </div>
+                <div class="location">
+                    <span><i class="fas fa-phone"></i></span>
+                    <a href="#">our phone</a>
+                    <section>+919344518443</section>
+                    <section>+917812025842</section>
+                </div>
+            </div>
+            <div class="footer1">
+                <h3>subscribe </h3>
+                <form action="">
+                    <input type="email" name="" id="" placeholder="your Email">
+                    <a href="#">subscribe</a>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
